--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
         <h1>This is a test heading</h1>
         <p>This is a paragraph text</p>
         <a href="https://www.youtube.com/">CLICK HERE!</a>
-        <img src="C:\Users\SonnyWu\GitHub-logo.png">
+        <br>
+        <img src="images/GitHub-logo.png" width="400" height="400"> 
     </body>
 </html>
