--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        Woah this is the head
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>This is a test heading</h1>
-        <p>This is a paragraph text</p>
-        <a href="https://www.youtube.com/">CLICK HERE!</a>
-        <br>
-        <img src="images/GitHub-logo.png" width="400" height="400"> 
+        <h1>This is a heading</h1>
+        <p>This is a paragraph</p>
     </body>
 </html>
